Bug 289258 - Satellite view shoes on other planets
Summary: Satellite view shoes on other planets
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-18 09:04 UTC by Todd
Modified: 2012-02-05 16:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2011-12-18 09:04:02 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When you display other planets besides Earth, the satellite view still shows the satellite list for Earth.  

Reproducible: Always

Steps to Reproduce:
1. Enable satellite view
2. Change the planet to Mars

Actual Results:  
The view shows the satellites of Earth

Expected Results:  
The view either shows the satellites of Mars or no satellites.
Comment 1 Thibaut Gridel 2012-02-04 17:10:38 UTC
Git commit 5edc2ea360998dd76a4bdecff740c7f5e0cb33bb by Thibaut Gridel.
Committed on 04/02/2012 at 18:07.
Pushed by tgridel into branch 'master'.

SatellitesPlugin: only enable on earth for now

M  +7    -1    src/plugins/render/satellites/SatellitesPlugin.cpp
M  +3    -0    src/plugins/render/satellites/TrackerPluginModel.cpp

http://commits.kde.org/marble/5edc2ea360998dd76a4bdecff740c7f5e0cb33bb
Comment 2 Dennis Nienhüser 2012-02-05 16:40:02 UTC
Git commit 7b621a5517fb19786a57ba5b8bb15d988adb38e0 by Dennis Nienhüser, on behalf of Thibaut Gridel.
Committed on 04/02/2012 at 18:07.
Pushed by nienhueser into branch 'Touch/1.3'.

SatellitesPlugin: only enable on earth for now
(cherry picked from commit 5edc2ea360998dd76a4bdecff740c7f5e0cb33bb)

M  +7    -1    src/plugins/render/satellites/SatellitesPlugin.cpp
M  +3    -0    src/plugins/render/satellites/TrackerPluginModel.cpp

http://commits.kde.org/marble/7b621a5517fb19786a57ba5b8bb15d988adb38e0