SatellitesPlugin: only enable on earth for now

BUG: 289258
(cherry picked from commit 5edc2ea360998dd76a4bdecff740c7f5e0cb33bb)